Updated navigation items across pages

--- a/contacts/contacts.html
+++ b/contacts/contacts.html
@@ -8,7 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="../styles/cervoniCritters.css">
+   <link rel="stylesheet" type="text/css" href="../styles/core.css">
+
+
 
     <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Volkhov:400,700&display=swap" rel="stylesheet">
 
@@ -16,9 +18,10 @@
   </head>
   
   <body>
+  
 
 </nav>
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark navBar">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark navBar">
       <a class="navbar-brand" href="../index.html"><i class="fas fa-paw"></i> Cervoni Critters</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -56,10 +59,6 @@
             </div>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
       </div>
 </nav>  
 
