--- a/index.html
+++ b/index.html
@@ -58,13 +58,18 @@
       </div>
     </nav>  
 
+   
+
     <div class="container">
-        <div class="jumbotron jumbotronHeaderImg">
-          <h1 class="display-5">Cervoni Critters</h1>
-          <p class="lead">Welcome our home and thank you for taking care of our dear critters</p>
+        <div class="row">
+            <div class="col-12-lg">
+                <div id="content">
+                    <h1 class="display-5">Cervoni Critters</h1>
+                    <p class="lead">Welcome our home and thank you for taking care of our dear critters</p>
+                </div>
+            </div>
+            
         </div>
-
-
         <div class="row justify-content-center">
 
             <div class="col-sm-6 col-md-3 box">
