--- a/index.html
+++ b/index.html
@@ -67,28 +67,28 @@
 
         <div class="row justify-content-center">
 
-            <div class="col-sm-6 col-md-3 box">
+            <div class="col-6 col-md-3 box">
                 <img src="images/animal-prints.png" class="icons">
                 <div>
                     <a href="#" class="btn btn-primary btn-sm center-block">Critters</a>
                 </div>
             </div> 
 
-            <div class="col-sm-6 col-md-3 box">
+            <div class="col-6 col-md-3 box">
                 <img src="images/flat.png" class="icons">
                 <div>
                     <a href="#" class="btn btn-primary btn-sm center-block">Apartment</a>
                 </div>
             </div> 
 
-            <div class="col-sm-6 col-md-3 box">
+            <div class="col-6 col-md-3 box">
                 <img src="images/placeholder.png" class="icons">
                 <div>
                     <a href="#" class="btn btn-primary btn-sm center-block">Neighborhood</a>
                 </div>
             </div> 
 
-            <div class="col-sm-6 col-md-3 box">
+            <div class="col-6 col-md-3 box">
                 <img src="images/red-cross.png" class="icons">
                 <div>
                     <a href="contacts/contacts.html" class="btn btn-primary btn-sm center-block">Contacts</a>
