Updated links and pages
Created all sub-directory pages and linked up navigation elements

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pets</a>
+            <a class="nav-link" href="critters/critters.html">Critters</a>
           </li>         
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Apartment</a>
+            <a class="nav-link" href="apartment/apartment.html">Apartment</a>
           </li>   
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Neighborhood</a>
+            <a class="nav-link" href="neighborhood/neighborhood.html">Neighborhood</a>
           </li>     
 
           <li class="nav-item">
@@ -59,7 +59,7 @@
     </nav>  
 
     
-        <div class="jumbotron jumbotronHeaderImg">
+        <div class="jumbotron homeJumbo">
           <h1 class="display-5">Cervoni Critters</h1>
           <p class="lead">Welcome our home and thank you for taking care of our dear critters</p>
         </div>
@@ -68,30 +68,30 @@
         <div class="row justify-content-center">
 
             <div class="col-6 col-md-3 box">
-                <img src="images/animal-prints.png" class="icons">
+                <a href="critters/critters.html"><img src="images/animal-prints.png" class="icons"></a>
                 <div>
-                    <a href="#" class="btn btn-primary btn-sm center-block">Critters</a>
+                    <a href="critters/critters.html" class="btn btn-primary btn-sm center-block mainNavButtons">Critters</a>
                 </div>
             </div> 
 
             <div class="col-6 col-md-3 box">
-                <img src="images/flat.png" class="icons">
+                <a href="apartment/apartment.html"><img src="images/flat.png" class="icons"></a>
                 <div>
-                    <a href="#" class="btn btn-primary btn-sm center-block">Apartment</a>
+                    <a href="apartment/apartment.html" class="btn btn-primary btn-sm center-block mainNavButtons">Apartment</a>
                 </div>
             </div> 
 
             <div class="col-6 col-md-3 box">
-                <img src="images/placeholder.png" class="icons">
+                <a href="neighborhood/neighborhood.html"><img src="images/placeholder.png" class="icons"></a>
                 <div>
-                    <a href="#" class="btn btn-primary btn-sm center-block">Neighborhood</a>
+                    <a href="neighborhood/neighborhood.html" class="btn btn-primary btn-sm center-block mainNavButtons">Neighborhood</a>
                 </div>
             </div> 
 
             <div class="col-6 col-md-3 box">
-                <img src="images/red-cross.png" class="icons">
+                <a href="contacts/contacts.html"><img src="images/red-cross.png" class="icons"></a>
                 <div>
-                    <a href="contacts/contacts.html" class="btn btn-primary btn-sm center-block">Contacts</a>
+                    <a href="contacts/contacts.html" class="btn btn-primary btn-sm center-block mainNavButtons">Contacts</a>
                 </div>
             </div> 
 
