Updates to contact / critters
Fully updated contacts page.
Started to updated critters page (basic)

--- a/contacts/contacts.html
+++ b/contacts/contacts.html
@@ -69,9 +69,9 @@
           <div class="col-md-6">
             <div class="card contactCard">
               <div class="card-body">
-                <h5 class="card-title">Non-Emergency Vet Care</h5>
-                <h5 class="card-title">Carroll Gardens Vet Group</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <h4 class="card-title">Non-Emergency Vet Care</h4>
+                <h5 class="contact-name"><em>Carroll Gardens Vet Group</em></h5>
+                <p class="card-text">Friendly Vet service by appointment if needed</p>
                 <p>Phone: <a href="tel:718-747-9279">(718) 747-9279</a></p>
                 <p>Directions: <a href="https://goo.gl/maps/dkp39VDYczJ4QbeX8" target="_blank"> Google Maps</a></p>
               </div>
@@ -81,34 +81,48 @@
           <div class="col-md-6">
             <div class="card contactCard">
               <div class="card-body">
-                <h5 class="card-title">Emergency Vet Care</h5>
-                <h5 class="card-title">Blue Pearl Vet Hospital</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h4 class="card-title">Emergency Vet Care</h4>
+                <h5 class="contact-name"><em>Blue Pearl Vet Hospital</em></h5>
+                <p class="card-text">24/7 emergency animal care located in Brooklyn.</p>
+                <p class="card-text">Click for a list of <a href="https://www.healthline.com/health/9-warning-signs-dog-needs-veterinarian" target="_blank">typical emergencies</a></p>
+                <p>Phone: <a href="tel:718-596-0099">(718) 596-0099</a></p>
+                <p>Directions: <a href="https://goo.gl/maps/RnJWzAHrjeRBnQoy7" target="_blank"> Google Maps</a></p>
               </div>
             </div>
-          </div>      
+          </div>   
 
           <div class="col-md-6">
-            <div class="card contactCard">
+            <div class="card contactCardName">
               <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h4 class="card-title">Dad</h4>
+                <h5 class="contact-name"><em>Michael Cervoni</em></h5>
+                <p>Phone: <a href="tel:203-435-7933">(203) 435-7933</a></p>
               </div>
             </div>
-          </div>          
+          </div> 
+
 
           <div class="col-md-6">
-            <div class="card contactCard">
+            <div class="card contactCardName">
               <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h4 class="card-title">Mom</h4>
+                <h5 class="contact-name"><em>Katherine Cervoni</em></h5>
+                <p>Phone: <a href="tel:706-773-0686">(706) 773-0686</a></p>
               </div>
             </div>
-          </div>
-        </div>
+          </div> 
+
+          <div class="col-md-6">
+            <div class="card contactCardName">
+              <div class="card-body">
+                <h4 class="card-title">Family Back-Up</h4>
+                <h5 class="contact-name"><em>Egidio Cervoni</em></h5>
+                <p>Phone: <a href="tel:203-464-4578">(203-464-4578</a></p>
+              </div>
+            </div>
+          </div> 
+
+
 
 
      </div>
