--- a/critters/critters.html
+++ b/critters/critters.html
@@ -57,13 +57,60 @@
       </div>
     </nav> 
 
-    
         <div class="jumbotron critterJumbo">
           <h1 class="display-5">The Critters</h1>
           <p class="lead">THe Gang: Sammy, Tootles, Babs, Penny and Bruce</p>
         </div>
 
+        <div class="container">
+            <h2>Topics</h2>
+            <p><a href="#feedingAndTreats">Feeding & Treats</a></p>
+            <p><a href="">Walks and Exercice</a></p>
+            <p><a href="">Commands</a></p>
+            <p><a href="">Bedtime</a></p>
+            <p><a href="">Baths</a></p>
+            <p><a href="">Special Bruce Instruciton</a></p>
 
+            <hr>
+
+            <div class="topicBlock">
+                <h5 id="feedingAndTreats">Feeding & Treats</h5>
+                <ul>
+                    <li class="listHeader">Food Storage</li>
+                        <ul>
+                            <li>Located in hallway closet</li>
+                            <li>White pastic bin on bottom left</li>
+                            <li>Metal sccoper inside bowl</li>
+                        </ul>
+                        <br>
+
+                    <li class="listHeader">Serving Size</li>
+                        <ul>
+                            <li>Bruce: 1 heaping scoop in <em>green plastic bowl</em></li>
+                            <li>Penny: 1 heaping scoop in <em>silver metal bowl</em></li>
+                        </ul>
+                        <br>
+
+                    <li class="listHeader">The Ritual</li>
+                        <ul>
+                            <li id="petName">Penny:</li>
+                                <ul>
+                                    <li>Give her the BED command and lead her to the green dog bed</li>
+                                    <li>Place her bowl on the bed</li>
+                                    <li>If she doesn't eat after about 10 minutes:</li>
+                                        <ul>
+                                            <li>Add a littl cold water, mix and sit for a minute</li>
+                                            <li>Still no dice? Add soem peanut butter</li>
+                                            <li>Nothing? Place in the fridge until next feeding</li>
+                                            <li><em>Note: </em> It's ok if Penny skips a single meal. If she's skipping two or more - call the vet and gives us a shout (<a href="../contacts/contacts.html">contact page</a>)
+                                        </ul>
+                                </ul>
+                        </ul>
+
+                    
+            </div>
+
+        </div>
 
 
       </div>
