Content and Critters Collaps
Updated content on Critters page
updated pill navigation and accordion cards

--- a/contacts/contacts.html
+++ b/contacts/contacts.html
@@ -96,7 +96,7 @@
               <div class="card-body">
                 <h4 class="card-title">Dad</h4>
                 <h5 class="contact-name"><em>Michael Cervoni</em></h5>
-                <p>Phone: <a href="tel:203-435-7933">(203) 435-7933</a></p>
+                <p class="personalPhone">Phone: <a href="tel:203-435-7933">(203) 435-7933</a></p>
               </div>
             </div>
           </div> 
@@ -107,7 +107,7 @@
               <div class="card-body">
                 <h4 class="card-title">Mom</h4>
                 <h5 class="contact-name"><em>Katherine Cervoni</em></h5>
-                <p>Phone: <a href="tel:706-773-0686">(706) 773-0686</a></p>
+                <p class="personalPhone">Phone: <a href="tel:706-773-0686">(706) 773-0686</a></p>
               </div>
             </div>
           </div> 
@@ -117,7 +117,7 @@
               <div class="card-body">
                 <h4 class="card-title">Family Back-Up</h4>
                 <h5 class="contact-name"><em>Egidio Cervoni</em></h5>
-                <p>Phone: <a href="tel:203-464-4578">(203-464-4578</a></p>
+                <p class="personalPhone">Phone: <a href="tel:203-464-4578">(203)-464-4578</a></p>
               </div>
             </div>
           </div> 
