--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               Critter Selector
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Dogs</a>
+              <a class="dropdown-item" href="critters/critters.html">Pups</a>
               <a class="dropdown-item" href="#">Kitties</a>
               <a class="dropdown-item" href="#">Fish</a>
             </div>
@@ -59,9 +59,11 @@
     </nav>  
 
     
-        <div class="jumbotron homeJumbo">
-          <h1 class="display-5">Cervoni Critters</h1>
-          <p class="lead">Welcome our home and thank you for taking care of our dear critters</p>
+        <div class="jumbotron homeJumbo jumbotron-fluid">
+          <div class="container">
+              <h1 class="display-5">Cervoni Critters</h1>
+              <p class="lead">Welcome our home and thank you for taking care of our dear critters</p>
+          </div>
         </div>
 
         <div class="container">
