--- a/critters/critters.html
+++ b/critters/critters.html
@@ -59,7 +59,7 @@
 
         <div class="jumbotron critterJumbo">
           <h1 class="display-5">The Critters</h1>
-          <p class="lead">THe Gang: Sammy, Tootles, Babs, Penny, Bruce and Hans</p>
+          <p class="lead">The Gang: Sammy, Tootles, Babs, Penny, Bruce and Hans</p>
         </div>
 
 
