--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           </div>
         </div>
 
-        <div class="container">
-        <div class="row justify-content-center">
+        <div class="container text-center">
+        <div class="row">
 
             <div class="col-6 col-md-3 box">
                 <a href="critters/critters.html"><img src="images/animal-prints.png" class="icons"></a>
