--- a/critters/critters.html
+++ b/critters/critters.html
@@ -434,6 +434,25 @@
                         </div>
                       </div>
 
+
+                      <div class="card">
+                        <div class="card-header" id="feedingAndTreats">
+                          <h5 class="mb-0">
+                            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                              Playtime & Brushing
+                            </button>
+                          </h5>
+                        </div>
+
+                        <!-- Feeding and Treats Content Section -->
+
+                        <div id="collapseOne" class="collapse show" aria-labelledby="feedingAndTreats" data-parent="#accordion">
+                          <div class="card-body">
+                            Playtime & Brushing content
+                          </div>
+                        </div>
+                      </div>  
+
                     </div>
                 </div>
 
