Finalized remaining critter directions

--- a/apartment/apartment.html
+++ b/apartment/apartment.html
@@ -60,7 +60,7 @@
     
         <div class="jumbotron critterJumbo">
           <h1 class="display-5">The Apartment</h1>
-          <p class="lead">Mi Casa, Tu Casa</p>
+          <p class="lead">Mi Casa, Su Casa</p>
         </div>
 
 
