--- a/critters/critters.html
+++ b/critters/critters.html
@@ -287,6 +287,7 @@
                                     <li><span class="petName">Penny</span> is fine on her own in the apt</li>
                                     <li>Be sure water bowl is full</li>
                                     <li>Make sure AC is on, but you can raise the temp to 73</li>
+                                    <li>Don't forget to check all the kitties are out of the closets :)</li>
                                 </ul>
 
                           </div>
@@ -417,41 +418,140 @@
 
                         <!--Feeding & Treats Accordion Bar -->
                       <div class="card">
-                        <div class="card-header" id="feedingAndTreats">
+                        <div class="card-header" id="feedingAndTreatsCats">
                           <h5 class="mb-0">
                             <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                              Kitties Feeding & Treats
+                            Feeding & Treats
                             </button>
                           </h5>
                         </div>
 
                         <!-- Feeding and Treats Content Section -->
 
-                        <div id="collapseOne" class="collapse show" aria-labelledby="feedingAndTreats" data-parent="#accordion">
+                        <div id="collapseOne" class="collapse" aria-labelledby="feedingAndTreatsCats" data-parent="#accordion">
                           <div class="card-body">
-                            Kitties Feeding & Treats content
+                            <h5>Feeding</h5>
+
+                            <p>Cats are a creature of nature. It’s important to stay on schedule. They will become impatient before feeding and meow, sprint around the apartment or scuffle with each other. Ignore them and stick to the schedule to keep the team happy.</p> <br>
+
+                            <ul>
+                                <li><strong>Feeding Windows:</strong></li>
+                                    <ul>
+                                        <li>Mornings 7:00 - 7:45</li>
+                                        <li>Evenings 7:00 - 8:00</li>
+                                    </ul>
+                            </ul>
+
+                            <ul>
+                                <li><strong>Portions:</strong></li>
+                                    <ul>
+                                        <li>Each meal includes 1 can, split 3-ways</li>
+                                        <li>Bowls are on the kitchen floor underneath the cabinets</li>
+                                        <li>Food is in bottom of the left-most cabinet under the large countertop</li> 
+                                        <li>Feed anywhere in the kitchen or area outside the kitchen</li>
+                                    </ul><br>
+                            </ul>
+
+                            <h5>Treats</h5><br>
+                                <ul>
+                                    <li>There are kitty treats in the left cabinet above the stove</li>
+                                    <li>Feel free to give them a few before meal times if they are getting too rowdy, otherwise feel free to give them treats throughout the day</li>
+                                </ul>
+
                           </div>
                         </div>
                       </div>
 
-
                       <div class="card">
-                        <div class="card-header" id="feedingAndTreats">
+                        <div class="card-header" id="playtimeAndBrushing">
                           <h5 class="mb-0">
-                            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                               Playtime & Brushing
                             </button>
                           </h5>
                         </div>
 
-                        <!-- Feeding and Treats Content Section -->
-
-                        <div id="collapseOne" class="collapse show" aria-labelledby="feedingAndTreats" data-parent="#accordion">
+                        <div id="collapseTwo" class="collapse" aria-labelledby="playtimeAndBrushing" data-parent="#accordion">
                           <div class="card-body">
-                            Playtime & Brushing content
+
+                                <ul>
+                                    <li>There are little mice you can throw around or the feather pole that they all love to play with. Sammy will always play, the other kitties may not play right away or at all. It’s ok</li><br>
+                                    <li>You can also rub some catnip on the cardboard scratch pad that’s next to the big grey chair, or on the scratch post next to the AC in the living room</li><br>
+                                    <li>Try and get about 5-10 minutes of play time a day with the kitties</li><br>
+                                    <li>Kitties love to be brushed. Use the green brush as many times as you would like. They’ll love you for it</li><br>
+                                </ul>
                           </div>
                         </div>
                       </div>  
+
+                      <div class="card">
+                        <div class="card-header" id="kittyLitter">
+                          <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+                              Kitty Litter
+                            </button>
+                          </h5>
+                        </div>
+
+
+                        <div id="collapseThree" class="collapse" aria-labelledby="kittyLitter" data-parent="#accordion">
+                          <div class="card-body">
+                            <ul>
+                                <li><strong>Three litter boxes throughout the apartment:</strong></li>
+                                <br>
+                                    <ol>
+                                        <li>Bathroom</li>
+                                        <li>Living room to the right of the TV</li>
+                                        <li>Living room behind big gray chair</li>
+                                    </ol>
+                            </ul>
+                            <br>
+
+                            <ul>
+                                <li><strong>Clean the boxes 2X a day: Morning and Evening</strong></li>
+                                <br>
+                                    <ul>
+                                        <li>Plastic bags are in the hallway closet, hanging in a yellow/white fabric tube to the left of the coat rack. Bags come out from the bottom</li><br>
+                                        <li>Scooper is attached to the box in the bathroom</li><br>
+                                        <li>Best to remove the top, shake any litter from the cover into the box and scoop away</li><br>
+                                        <li>Throw bag into trash (under sink) or toss into the garbage shoot in the hallway past the elevator on the right <em>(don’t lock the door behind you!)</em></li>
+                                    </ul>
+                            </ul>
+                            <br>
+
+                            <p><strong><span class="warning">Warning:</span></strong> Tootles poops on the floor outside the bathroom or in the middle room if the litter boxes aren’t clean. If she does:</p>
+
+                                <ul>
+                                    <li>Pick it up with some toilet paper and flush</li>
+                                    <li>Spray the floor with the pet cleaning solution (cabinet underneath sink) and wipe up</li>
+                                </ul>
+
+                          </div>
+                        </div>
+                      </div> 
+
+                      <div class="card">
+                        <div class="card-header" id="kittyWatchOuts">
+                          <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseOne">
+                              Kitty Watch Outs 
+                            </button>
+                          </h5>
+                        </div>
+
+                       
+
+                        <div id="collapseFour" class="collapse" aria-labelledby="kittyWatchOuts" data-parent="#accordion">
+                          <div class="card-body">
+                            <ul>
+                                <li>If you leave food in the sink or on the counter - they will try and be sneaky and eat it</li><br>
+                                <li>They may get into closets without you knowing - make sure you check they are all out and about and closet doors are closed when you leave the apartment</li><br>
+                                <li>Sometimes Sammy pushes the play-time limit with the big girls and they get into a sisterly brawl. It may sound scary, but it’s ok. Just break it up by going over and clapping your hands loudly. They will disperse. This usually happens before meal time</li>
+
+                            </ul>
+                          </div>
+                        </div>
+                      </div> 
 
                     </div>
                 </div>
@@ -466,7 +566,7 @@
                         <div class="card-header" id="feedingAndTreats">
                           <h5 class="mb-0">
                             <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                              Fish Feeding & Treats
+                              Fish Feeding 
                             </button>
                           </h5>
                         </div>
@@ -475,7 +575,9 @@
 
                         <div id="collapseOne" class="collapse show" aria-labelledby="feedingAndTreats" data-parent="#accordion">
                           <div class="card-body">
-                            Fish Feeding & Treats content
+                            <ul>
+                                <li>3-4 pebbles in the AM and PM</li>
+                            </ul>
                           </div>
                         </div>
                       </div>
